@@ -13,6 +13,7 @@ GENERAL:
 * class-EthernetIfStore/-EthernetInterface | introduce function addSubintefaceToStore( $subinterface )
 * class-SecurityRule | implement scheduler
 * class-EthernetInterface/-StaticRouter/-VirtualRouter/ utils interface - add support for IPv6 Addresses
+* class-ServiceStore | introduce function findbyProtocolDstSrcPort
 
 UTILS:
 service-merger: extend location=any - especially for Panorama DG to merge all DG objects with one single script run - also possible with argument allowmergingwithupperlevel
